--- a/backend/CommentsApp.API/CommentsApp.API/CommentsApp.API.csproj
+++ b/backend/CommentsApp.API/CommentsApp.API/CommentsApp.API.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CommentsApp.Core\CommentsApp.Core\CommentsApp.Core.csproj" />
