--- a/backend/CommentsApp.API/CommentsApp.API/appsettings.json
+++ b/backend/CommentsApp.API/CommentsApp.API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Database=commentsdb;Username=postgres;Password=postgres123",
-    "Redis": "redis:6379",
-    "RabbitMQ": "amqp://guest:guest@rabbitmq:5672"
+    "DefaultConnection": "${DATABASE_URL}",
+    "Redis": "${REDIS_URL}",
+    "RabbitMQ": "${RABBITMQ_URL}"
   }
 }
