--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-﻿REACT_APP_API_URL=https://https://lovely-achievement-production.up.railway.app
+﻿REACT_APP_API_URL=https://lovely-achievement-production.up.railway.app
