--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -4,50 +4,64 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0
 RUN apt-get update && \
     curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
     apt-get install -y nodejs && \
-    rm -rf /var/lib/apt/lists/* && \
-    echo "Node version:" && node --version && \
-    echo "NPM version:" && npm --version
+    node --version && npm --version
 
-WORKDIR /src
+WORKDIR /build
 
-# Копіюємо backend
+# === BACKEND ===
 COPY backend/ ./backend/
-
-# Будуємо backend
-WORKDIR /src/backend
+WORKDIR /build/backend
 RUN dotnet restore CommentsApp.sln
 RUN dotnet publish CommentsApp.API/CommentsApp.API/CommentsApp.API.csproj -c Release -o /app
-RUN echo "Backend published to /app" && ls -la /app
 
-# Копіюємо frontend
-WORKDIR /src/frontend
-COPY frontend/package*.json ./
-RUN npm install
+# === FRONTEND ===
+WORKDIR /build/frontend
 COPY frontend/ ./
 
-# Будуємо frontend
-RUN npm run build
-RUN echo "Frontend build completed:" && ls -la ./build
+# Перевірка package.json
+RUN echo "=== package.json ===" && cat package.json
 
-# Копіюємо frontend в wwwroot
-RUN mkdir -p /app/wwwroot && \
-    cp -rv ./build/* /app/wwwroot/ && \
-    echo "Copied to wwwroot:" && ls -la /app/wwwroot
+# Встановлення залежностей
+RUN npm install
 
-# Створюємо папку uploads
-RUN mkdir -p /app/wwwroot/uploads && chmod 777 /app/wwwroot/uploads
+# Перевірка scripts
+RUN echo "=== Check if build script exists ===" && \
+    npm run --list
 
-# Перевірка
-RUN if [ -f "/app/wwwroot/index.html" ]; then \
-        echo "✅ SUCCESS: index.html exists in wwwroot"; \
+# Білд React
+RUN echo "=== Starting React build ===" && \
+    npm run build || (echo "❌ Build failed!" && exit 1)
+
+# Перевірка результату білду
+RUN echo "=== Build folder contents ===" && \
+    ls -lah ./build/ && \
+    echo "=== index.html check ===" && \
+    cat ./build/index.html | head -n 5
+
+# Копіювання в wwwroot
+RUN echo "=== Creating wwwroot ===" && \
+    mkdir -p /app/wwwroot && \
+    echo "=== Copying files ===" && \
+    cp -v ./build/* /app/wwwroot/ 2>&1 || echo "Copy individual files failed, trying recursive..." && \
+    cp -rv ./build/* /app/wwwroot/
+
+# Фінальна перевірка
+RUN echo "=== Final wwwroot check ===" && \
+    ls -lah /app/wwwroot/ && \
+    if [ -f "/app/wwwroot/index.html" ]; then \
+        echo "✅ index.html found!"; \
     else \
-        echo "❌ ERROR: index.html NOT FOUND in wwwroot"; \
+        echo "❌ index.html missing!" && \
+        echo "=== Searching for index.html ===" && \
+        find /build -name "index.html" && \
         exit 1; \
     fi
+
+# Uploads folder
+RUN mkdir -p /app/wwwroot/uploads && chmod 777 /app/wwwroot/uploads
 
 WORKDIR /app
 EXPOSE 8080
 ENV ASPNETCORE_URLS=http://+:8080
-ENV ASPNETCORE_ENVIRONMENT=Production
 
 ENTRYPOINT ["dotnet", "CommentsApp.API.dll"]
