--- a/backend/CommentsApp.API/CommentsApp.API/CommentsApp.API.csproj
+++ b/backend/CommentsApp.API/CommentsApp.API/CommentsApp.API.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
+    <PackageReference Include="System.Web.HttpUtility" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CommentsApp.Core\CommentsApp.Core\CommentsApp.Core.csproj" />
